# aoc_rs

./: .env  .gitignore  Cargo.toml  new_day.sh  template
src/: common.rs  main.rs
src/y2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  mod.rs
src/y2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
src/y2025/: day01.rs  day02.rs  mod.rs
