[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
memoize = "0.4.2"
pathfinding = "4.12.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
